--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./scripts/generate.js"
+    "build": "node ./scripts/generate.js && node ./scripts/generate-zh.js"
   },
   "author": "",
   "license": "ISC"
